--- a/package.json
+++ b/package.json
@@ -26,16 +26,22 @@
     "vi-css-helper": "git+https://github.com/virtualidentityag/vi-css-helper.git#1.1.1"
   },
   "devDependencies": {
-    "@biotope/cli": "^1.1.5",
     "@biotope/build": "^6.2.0",
+    "@biotope/cli": "^1.1.5",
     "@types/modernizr": "^3.5.3",
     "@types/node": "^10.12.18",
     "chai": "4.2.0",
     "chai-fs": "2.0.0",
+    "cz-conventional-changelog": "^3.0.2",
     "gulp": "3.9.1",
     "mocha": "5.0.1"
   },
   "engines": {
     "node": ">=8.9.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
