--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@biotope/element": "^3.2.0",
     "@biotope/resource-loader": "2.1.1",
     "breakpoint-sass": "2.7.1",
+    "classnames": "^2.2.6",
     "handlebars": "4.1.2",
     "sanitize.css": "^11.0.0",
     "susy": "2.2.14",
