--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,6 @@ jobs:
         SSH_CONNECTION: vi-jenkins@preview.virtual-identity.com
         DEPLOYMENT_ROOT: /var/www/sites/biotope
       run: |
-        echo Branch name is ${GITHUB_REF}, SSH_CONNECTION is ${SSH_CONNECTION}, DEPLOYMENT_ROOT is ${DEPLOYMENT_ROOT + 'test'} 
+        echo HOME is ${HOME}, GITHUB_WORKFLOW is ${GITHUB_WORKFLOW}, GITHUB_ACTION is ${GITHUB_ACTION}, GITHUB_REPOSITORY is ${GITHUB_REPOSITORY}, GITHUB_EVENT_NAME is ${GITHUB_EVENT_NAME}, GITHUB_EVENT_PATH is ${GITHUB_EVENT_PATH}, GITHUB_WORKSPACE is ${GITHUB_WORKSPACE}, GITHUB_SHA is ${GITHUB_SHA}, GITHUB_REF is ${GITHUB_REF}, GITHUB_HEAD_REF is ${GITHUB_HEAD_REF}, GITHUB_BASE_REF is ${GITHUB_BASE_REF}
         # ssh -o StrictHostKeyChecking=no $SSH_CONNECTION 'mkdir -p $DEPLOYMENT_PATH;'
         # rsync -rvtze \"ssh -o StrictHostKeyChecking=no\" dist/ $SSH_CONNECTION:$DEPLOYMENT_ROOT/$
