--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,9 @@ jobs:
             #     npm build
             - name: ssh-test
               uses: appleboy/ssh-action@v0.0.2
+              env:
+                  SSH_CONNECTION: vi-jenkins@preview.virtual-identity.com
+                  DEPLOYMENT_ROOT: /var/www/sites/biotope
+              with:
+                args: ls
+                secrets: $SSH_PW
