--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,5 @@ jobs:
                 args: 
                   ls
                 secrets: 
-                  SSH_PW
+                  HOST
+                  PASSWORD
