--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,5 @@ jobs:
                 args: 
                   ls
                 secrets: 
-                  HOST
-                  PASSWORD
+                  ${{ secrets.HOST }}
+                  ${{ secrets.PASSWORD }}
