--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,10 @@ jobs:
 
         steps:
             - uses: actions/checkout@v1
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
-              with:
-                  node-version: ${{ matrix.node-version }}
+            # - name: Use Node.js ${{ matrix.node-version }}
+            #   uses: actions/setup-node@v1
+            #   with:
+            #       node-version: ${{ matrix.node-version }}
             # - name: npm install, build, and test
             #   run: |
             #     npm install
