--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
             #     npm install
             #     npm build
             - run: |
-                echo ${{ secrets }}
+                echo ${{ secrets.HOST }}
             # - name: ssh-test
             #   uses: appleboy/ssh-action@v0.0.2
             #   env:
