--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,14 +22,14 @@ jobs:
             #     npm build
             - run: |
                 echo ${{ secrets.HOST }}
-            # - name: ssh-test
-            #   uses: appleboy/ssh-action@v0.0.2
-            #   env:
-            #       SSH_CONNECTION: vi-jenkins@preview.virtual-identity.com
-            #       DEPLOYMENT_ROOT: /var/www/sites/biotope
-            #   with:
-            #     args: 
-            #       ls
-            #     secrets: 
-            #       ${{ secrets.HOST }}
-            #       ${{ secrets.PASSWORD }}
+            - name: ssh-test
+              uses: appleboy/ssh-action@v0.0.2
+              env:
+                  SSH_CONNECTION: vi-jenkins@preview.virtual-identity.com
+                  DEPLOYMENT_ROOT: /var/www/sites/biotope
+              with:
+                args: 
+                  ls
+                secrets: 
+                  ${{ secrets.HOST }}
+                  ${{ secrets.PASSWORD }}
