--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,10 @@ jobs:
   one:
     runs-on: ubuntu-16.04
     steps:
+      - name: Print branch name
+        run: >
+          export BRANCH_NAME = $( basename $GITHUB_REF ) &&
+          echo $BRANCH_NAME
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
