--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@biotope/element": "^3.2.0",
     "@biotope/resource-loader": "2.1.1",
     "@types/gsap": "^1.20.2",
-    "bodymovin": "^4.13.0",
     "breakpoint-sass": "2.7.1",
     "classnames": "^2.2.6",
     "gsap": "^2.1.3",
     "handlebars": "4.1.2",
     "imports-loader": "^0.8.0",
+    "lottie-web": "^5.5.8",
     "sanitize.css": "^11.0.0",
     "scrollmagic": "^2.0.7",
     "scrollmagic-plugin-gsap": "^1.0.3",
