--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@biotope/element": "^3.2.0",
     "@biotope/resource-loader": "2.1.1",
     "@types/gsap": "^1.20.2",
+    "@webcomponents/webcomponentsjs": "^2.3.0",
     "breakpoint-sass": "2.7.1",
     "classnames": "^2.2.6",
     "gsap": "^2.1.3",
