--- a/.github/workflows/biowebsiteCICD.yml
+++ b/.github/workflows/biowebsiteCICD.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
     - name: npm install and build
       run: |
         npm install && npm run build
