--- a/.github/workflows/biowebsiteCICD.yml
+++ b/.github/workflows/biowebsiteCICD.yml
@@ -32,7 +32,7 @@ jobs:
       uses: chetan/invalidate-cloudfront-action@master
       env:
         DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
-        PATHS: '/index.html'
+        PATHS: '/*'
         AWS_REGION: 'eu-central-1'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
