--- a/package.json
+++ b/package.json
@@ -1,55 +1,56 @@
 {
-  "name": "biotope-website",
-  "title": "Biotope - Website",
-  "version": "1.1.0",
-  "description": "Website for Biotope",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/biotope/biotope.git"
-  },
-  "license": "MIT",
-  "scripts": {
-    "start": "gulp serve",
-    "build": "gulp build",
-    "test:travis": "mocha test/travis/build.js",
-    "test:ci": "echo \"Not implemented yet\"",
-    "test:e2e": "echo \"Not implemented yet\"",
-    "lint": "echo \"Not implemented yet\""
-  },
-  "dependencies": {
-    "@biotope/element": "^3.2.0",
-    "@biotope/resource-loader": "2.1.1",
-    "@types/gsap": "^1.20.2",
-    "@webcomponents/webcomponentsjs": "^2.3.0",
-    "breakpoint-sass": "2.7.1",
-    "classnames": "^2.2.6",
-    "gsap": "^2.1.3",
-    "handlebars": "4.1.2",
-    "imports-loader": "^0.8.0",
-    "lottie-web": "^5.5.8",
-    "sanitize.css": "^11.0.0",
-    "scrollmagic": "^2.0.7",
-    "scrollmagic-plugin-gsap": "^1.0.3",
-    "susy": "2.2.14",
-    "vi-css-helper": "git+https://github.com/virtualidentityag/vi-css-helper.git#1.1.1"
-  },
-  "devDependencies": {
-    "@biotope/build": "^7.1.1",
-    "@biotope/cli": "^1.1.5",
-    "@types/modernizr": "^3.5.3",
-    "@types/node": "^10.12.18",
-    "chai": "4.2.0",
-    "chai-fs": "2.0.0",
-    "cz-conventional-changelog": "^3.0.2",
-    "gulp": "3.9.1",
-    "mocha": "5.0.1"
-  },
-  "engines": {
-    "node": ">=10.16.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+    "name": "biotope-website",
+    "title": "Biotope - Website",
+    "version": "1.1.0",
+    "description": "Website for Biotope",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/biotope/biotope.git"
+    },
+    "license": "MIT",
+    "scripts": {
+        "start": "gulp serve",
+        "build": "gulp build && cpy src/googlee1a8fc5907da97e7.html dist",
+        "test:travis": "mocha test/travis/build.js",
+        "test:ci": "echo \"Not implemented yet\"",
+        "test:e2e": "echo \"Not implemented yet\"",
+        "lint": "echo \"Not implemented yet\""
+    },
+    "dependencies": {
+        "@biotope/element": "^3.2.0",
+        "@biotope/resource-loader": "2.1.1",
+        "@types/gsap": "^1.20.2",
+        "@webcomponents/webcomponentsjs": "^2.3.0",
+        "breakpoint-sass": "2.7.1",
+        "classnames": "^2.2.6",
+        "gsap": "^2.1.3",
+        "handlebars": "4.1.2",
+        "imports-loader": "^0.8.0",
+        "lottie-web": "^5.5.8",
+        "sanitize.css": "^11.0.0",
+        "scrollmagic": "^2.0.7",
+        "scrollmagic-plugin-gsap": "^1.0.3",
+        "susy": "2.2.14",
+        "vi-css-helper": "git+https://github.com/virtualidentityag/vi-css-helper.git#1.1.1"
+    },
+    "devDependencies": {
+        "@biotope/build": "^7.1.1",
+        "@biotope/cli": "^1.1.5",
+        "@types/modernizr": "^3.5.3",
+        "@types/node": "^10.12.18",
+        "chai": "4.2.0",
+        "chai-fs": "2.0.0",
+        "cpy-cli": "^2.0.0",
+        "cz-conventional-changelog": "^3.0.2",
+        "gulp": "3.9.1",
+        "mocha": "5.0.1"
+    },
+    "engines": {
+        "node": ">=10.16.1"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
-  }
 }
