--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "start": "gulp serve",
-    "build": "gulp build",
+    "build": "gulp build && cpy src/googlee1a8fc5907da97e7.html dist",
     "test:travis": "mocha test/travis/build.js",
     "test:ci": "echo \"Not implemented yet\"",
     "test:e2e": "echo \"Not implemented yet\"",
@@ -40,6 +40,7 @@
     "@types/node": "^10.12.18",
     "chai": "4.2.0",
     "chai-fs": "2.0.0",
+    "cpy-cli": "^2.0.0",
     "cz-conventional-changelog": "^3.0.2",
     "gulp": "3.9.1",
     "mocha": "5.0.1"
